# aigent

./: .gitattributes  .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh  lefthook.yml
.claude-plugin/: plugin.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
dev/: plugin-dev.md
dev/115/: plan.md  review.md
dev/116/: plan.md  review.md
dev/117/: plan.md  review.md
dev/118/: review.md
dev/141/: review.md
dev/142/: review.md
dev/143/: review.md
dev/f01/: plan.md  review.md
dev/f02/: review.md
dev/m01/: review.md
dev/m02/: plan.md  review.md
dev/m03/: plan.md  review.md
dev/m04/: plan.md  review.md
dev/m05/: plan.md  review.md
dev/m06/: plan.md  review.md
dev/m07/: plan.md  review.md
dev/m08/: plan.md  review.md
dev/m09/: plan.md  review.md
dev/m10/: plan.md  review.md
dev/m11/: plan.md  review.md
dev/m12/: plan.md  review.md
dev/m13/: plan.md  review.md
dev/m14/: audit.md  plan.md  review.md
dev/m15/: plan.md  review.md
dev/posts/: aigent-linkedin-post.md  anthropic-outreach.md  blog.md  community.md  linkedin.md  plan.md  post-0.3.0.md
dev/review/: aigent-review.md  security.md
docs/: api.md  cli.md  development.md  library.md  plugin-dev.md  plugin.md
graphics/: hello.tape
hooks/: hooks.json
scripts/: bump-version.sh  version.sh
skills/aigent-builder/: SKILL.md
skills/aigent-scorer/: SKILL.md
skills/aigent-validator/: SKILL.md
src/: assembler.rs  builder.rs  conflict.rs  diagnostics.rs  errors.rs  fixer.rs  formatter.rs  fs_util.rs  lib.rs  linter.rs  main.rs  models.rs  parser.rs  prompt.rs  scorer.rs  structure.rs  test_runner.rs  tester.rs  validator.rs
src/builder/: deterministic.rs  llm.rs  mod.rs  template.rs  util.rs
src/cli/: build.rs  check.rs  doc.rs  format.rs  init.rs  (+11 more)
tests/: anthropics_skills.rs  cli.rs  plugin.rs
(+12 files in other folders)
